--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <img src="home-icon.png" alt="Home">
     </a>
     <header>
-        <img src="logo.png" alt="Jetpa.cc Logo" width="1000" height="400">
+        <img src="logo.png" alt="Jetpa.cc Logo" width="900" height="400">
         <h1>A product studio building AI experiences to augment human thought and creativity.</h1>
         <button onclick="window.location.href='join-us.html'">Join Us</button>
     </header>
@@ -28,7 +28,7 @@
         </section>
         <section id="contact">
             <h2>Contact Us</h2>
-            <p>If you're interested in joining our team or partnering with us, reach out <a href="https://jetpa.cc/join-us" target="_blank">here.</p>
+            <p>If you're interested in joining our team or partnering with us, reach out <a href="http://www.jetpa.cc/join-us.html" target="_blank">here.</p>
         </section>
     </main>
     <footer>
