--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
         </section>
         <section id="contact">
             <h2>Contact Us</h2>
-            <p>If you're interested in joining our team or partnering with us, reach out <a href="http://www.jetpa.cc/join-us.html" target="_blank">here.</p>
+            <p>If you're interested in joining our team or partnering with us, reach out <a href="https://www.jetpa.cc/join-us.html" target="_blank">here.</p>
         </section>
     </main>
     <footer>
-        <p>Copyright &copy; 2024 <a href="https://jetpa.cc" target="_blank">Jetpa.cc</a>. Made with &#10084;&#65039; in Silicon Valley.</p>
+        <p>Copyright &copy; 2024 <a href="https://www.jetpa.cc/" target="_blank">Jetpa.cc</a>. Made with &#10084;&#65039; in Silicon Valley.</p>
     </footer>
     <script>feather.replace();</script>
 </body>
