--- a/join-us.html
+++ b/join-us.html
@@ -27,7 +27,7 @@
         </section>
     </main>
     <footer>
-        <p>Copyright &copy; 2024 <a href="https://jetpa.cc" target="_blank">Jetpa.cc</a>. Made with &#10084;&#65039; in Silicon Valley.</p>
+        <p>Copyright &copy; 2024 <a href="https://www.jetpa.cc/" target="_blank">Jetpa.cc</a>. Made with &#10084;&#65039; in Silicon Valley.</p>
     </footer>
 </body>
 </html>
