--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="https://unpkg.com/feather-icons"></script>
 </head>
 <body>
-    <a href="index.html" class="home-button">
+    <a href="https://www.jetpa.cc/" class="home-button">
         <img src="home-icon.png" alt="Home">
     </a>
     <header>
