--- a/join-us.html
+++ b/join-us.html
@@ -6,27 +6,62 @@
     <title>Join Us - Jetpa.cc</title>
     <link rel="stylesheet" href="style.css">
     <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <script>
+        let lastSubmissionTime = 0;
+
+        function validateForm() {
+            const name = document.getElementById('name').value.trim();
+            const email = document.getElementById('email').value.trim();
+            const interest = document.getElementById('interest').value.trim();
+            const experience = document.getElementById('experience').value.trim();
+
+            if (!name || !email || !interest || !experience) {
+                alert('Please fill out all fields.');
+                return false;
+            }
+
+            return true;
+        }
+
+        function showConfirmation() {
+            if (!validateForm()) return false;
+
+            const currentTime = new Date().getTime();
+            if (currentTime - lastSubmissionTime < 300000) { // 5 minutes = 300000 milliseconds
+                alert('You can only submit an application every 5 minutes. Please wait.');
+                return false;
+            }
+
+            lastSubmissionTime = currentTime;
+            alert('Thank you for your application! We will get back to you soon.');
+            return true; // Change this to true to allow form submission
+        }
+    </script>
 </head>
-<body>
-    <a href="index.html" class="home-button">
+<body class="join-page">
+    <a href="https://www.jetpa.cc/" class="home-button">
         <img src="home-icon.png" alt="Home">
     </a>
-    <header>
+    <header class="join-header">
         <h1>Join Us at Jetpa.cc</h1>
-        <p>Become part of our team and help us build innovative AI solutions.</p>
+        <h3>Become part of our team and help us build innovative AI solutions.</h3>
     </header>
-    <main>
-        <section>
-            <form action="/submit-application" method="post">
+    <main class="join-main">
+        <section class="join-section">
+            <form action="/submit-application" method="post" class="join-form" onsubmit="return showConfirmation()">
                 <label for="name">Name:</label>
-                <input type="text" id="name" name="name">
+                <input type="text" id="name" name="name" required>
                 <label for="email">Email:</label>
-                <input type="email" id="email" name="email">
-                <button type="submit">Submit Application</button>
+                <input type="email" id="email" name="email" required>
+                <label for="interest">Why are you interested in joining our team?</label>
+                <textarea id="interest" name="interest" required></textarea>
+                <label for="experience">What experiences do you have in AI research?</label>
+                <textarea id="experience" name="experience" required></textarea>
+                <button type="submit" class="join-button">Submit Application</button>
             </form>
         </section>
     </main>
-    <footer>
+    <footer class="join-footer">
         <p>Copyright &copy; 2024 <a href="https://www.jetpa.cc/" target="_blank">Jetpa.cc</a>. Made with &#10084;&#65039; in Silicon Valley.</p>
     </footer>
 </body>
