--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     </a>
     <header>
         <img src="logo.png" alt="Jetpa.cc Logo" width="900" height="400">
-        <h1>A product studio building AI experiences to augment human thought and creativity.</h1>
+        <h1>A research lab leveraging AI to alleviate everyday human inconviences.</h1>
         <button onclick="window.location.href='join-us.html'">Join Us</button>
     </header>
     <main>
