--- a/join-us.html
+++ b/join-us.html
@@ -23,7 +23,9 @@
             return true;
         }
 
-        function showConfirmation() {
+        function handleSubmit(event) {
+            event.preventDefault(); // Prevent actual form submission
+
             if (!validateForm()) return false;
 
             const currentTime = new Date().getTime();
@@ -34,7 +36,10 @@
 
             lastSubmissionTime = currentTime;
             alert('Thank you for your application! We will get back to you soon.');
-            return true; // Change this to true to allow form submission
+            
+            // Here you can add AJAX call to send form data to your server if necessary
+
+            window.location.href = 'https://www.jetpa.cc/'; // Redirect to home page
         }
     </script>
 </head>
@@ -48,7 +53,7 @@
     </header>
     <main class="join-main">
         <section class="join-section">
-            <form action="/submit-application" method="post" class="join-form" onsubmit="return showConfirmation()">
+            <form class="join-form" onsubmit="handleSubmit(event)">
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name" required>
                 <label for="email">Email:</label>
