--- a/join-us.html
+++ b/join-us.html
@@ -49,7 +49,7 @@
     </a>
     <header class="join-header">
         <h1>Join Us at Jetpa.cc</h1>
-        <h3>Become part of our team and help us build innovative AI solutions.</h3>
+        <h3>Become part of our team and solve daily hassles.</h3>
     </header>
     <main class="join-main">
         <section class="join-section">
