--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
             <p>Jetpa.cc is dedicated to creating AI solutions that solve human problems, bridging the gap between technology and human creativity.</p>
         </section>
         <section id="projects">
-            <h2>What We're Working On</h2>
-            <p>hi</p>
+            <h2>What We're Working On...</h2>
+            <p>Coming soon!</p>
         </section>
         <section id="contact">
             <h2>Contact Us</h2>
