--- a/join-us.html
+++ b/join-us.html
@@ -69,17 +69,19 @@
     </header>
     <main class="join-main">
         <section class="join-section">
-            <form id="contact-form" class="join-form">
+            <form id="contact-form" class="join-form" enctype="multipart/form-data">
                 <label for="name">Name:</label>
                 <input type="text" id="name" name="name" required>
                 <label for="email">Email:</label>
                 <input type="email" id="email" name="email" required>
-                <label for="email">LinkedIn or Website (optional):</label>
+                <label for="url">LinkedIn or Website (optional):</label>
                 <input type="url" id="url" name="url">
-                <label for="interest">Why are you interested in joining our team?</label>
+                <label for="interest">Why are you interested in joining/partnering with our team?</label>
                 <textarea id="interest" name="interest" required></textarea>
-                <label for="experience">What is your experience in AI research? (for researcher applicants)</label>
-                <textarea id="experience" name="experience" required></textarea>
+                <label for="experience">What is your experience in AI research? (for research applicants)</label>
+                <textarea id="experience" name="experience"></textarea>
+                <label for="resume">Your Resume/CV (if applicable)</label>
+                <input type="file" id="resume" name="resume" accept=".pdf,.doc,.docx">
                 <button type="submit" class="join-button">Submit Application</button>
             </form>
         </section>
